[metadata]
name = shipcal
version = 2.0.0
url = https://github.com/mfrasquet/SHIPcal
download_url = https://github.com/mfrasquet/SHIPcal/releases
project_urls =
    Bug Tracker = https://github.com/mfrasquet/SHIPcal/issues
    Documentation = https://github.com/mfrasquet/SHIPcal/wiki
    Source Code = https://github.com/mfrasquet/SHIPcal
author = Miguel Frasquet Herraiz
maintainer = Juan Antonio Aramburo Pasapera
maintainer_email = ja.arpa97@gmail.com
description = Solar Heat for Industrial Processes calculator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = solar heat industrial processes calculator simulator
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Office/Business :: Financial :: Investment
platforms = any

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy >= 1.16
    pandas >= 0.22
    pvlib >= 0.9
    iapws >= 1.5
    bokeh == 2.4
python_requires = >=3.6

[options.packages.find]
where = src

# Collector characteristics in data files will be required
include_package_data = True
zip_safe = False

[options.package_data]
* = data/*

[pylama]
paths = src/shipcal
skip = *.tox/*,*/.env/*,*tests/*,*shipcal/legacy/*

[pylama:*/__init__.py]
ignore = W0611

[coverage:run]
branch = True
source = shipcal
omit = shipcal/legacy/*

[coverage:report]
show_missing = True
skip_covered = True

# [options.packages.find]
# where = shipcal
# exclude = tests

# eager_resources

# This is used for console scripts (use of the package in the console)
# [options.entry_points]
# deprecated
# scripts

# For package data files exluded because include_package_data = False
# [options.package_data]
# [options.exclude_package_data]

# Deprecated
# tests_require

# Excluded because there is no optional dependecies in SHIPcal
# [options.extras_require]

# All dependencies are in pypi
# dependency_links

# Listing packages instead of modules and using find tool and deprecated
# py_modules